--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -17,6 +17,19 @@ $z$ --- осевая координата, по которой область о
 с УЭС $\rho_{зп}=15$, третий слой --- пласт ($r>r_\text{п}$) с УЭС $\rho_\text{п}=10$. В начале координат размещается
 источник тока силой 1.
 
+В этих условиях случае потенциал электростатического поля $\varphi$ определяется следующей краевой задачей:
+\begin{equation}
+\Delta\varphi=\frac{1}{r}\frac{\partial}{\partial r}\left(r\frac{\partial\varphi}{\partial r}\right)
++ \frac{\partial^2\varphi}{\partial z^2}=0,
+\end{equation}
+с граничными условиями Дирихле
+\begin{eqnarray}
+\varphi(r\to+\infty)   &\to& 0\\
+\varphi(z\to\pm\infty) &\to& 0\\
+\varphi(r^2+z^2\to 0)  &\to& \frac{1}{4\pi\sqrt{r^2+z^2}}\\
+\left.\frac{\partial \varphi}{\partial r}\right|_{r=0, z\ne 0} &=& 0
+\end{eqnarray}
+
 В качестве основы для расчётной сетки использовалась одномерная сетка, узлы которой рассчитаны в параграфе
 \ref{OneDim}, отложенная на лучах, исходящих из начала координат под различными углами.
 Затем эта основа дополнялась узлами, лежащими на границах разрыва УЭС $r=1$ и $r=r_\text{п}$.
