--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -14,7 +14,7 @@
 задача рассматривается в цилиндрической системе координат $(r, z)$, где $r > 0$ --- радиальная координата,
 $z$ --- осевая координата, по которой область однородна (единственный однородный пласт бесконечной мощности),
 первый слой --- сама скважина ($0 < r < 1$) с УЭС $\rho_\text с = 1$, второй слой --- зона проникновения ($1<r<r_\text{зп} = 9$)
-с УЭС $\rho_{зп}=15$, третий слой --- пласт ($r>r_\text{п}$) с УЭС $\rho_\text{п}=10$. В начале координат размещается
+с УЭС $\rho_\text{зп}=15$, третий слой --- пласт ($r>r_\text{п}$) с УЭС $\rho_\text{п}=10$. В начале координат размещается
 источник тока силой 1.
 
 В этих условиях случае потенциал электростатического поля $\varphi$ определяется следующей краевой задачей:
@@ -298,7 +298,7 @@ $\varepsilon$.
   \includegraphics{exps/6_rhog}
 \end{figure}
 
-\refstepcounter{exp} \theexp \label{ideal}.
+\refstepcounter{exp} \theexp.
 Добавлены сегменты возле мест разрыва коэффициента УЭС. Использованы лагранжевые элементы $\mathcal{P}_2$.
 
 Кол-во узлов: 156856
@@ -317,15 +317,52 @@ $\varepsilon$.
 и лучший эксперимент, в котором получилось приемлимое решение кажущегося сопротивления во всей области
 с меньшим числом узлов.>
 
+\refstepcounter{exp} \theexp \label{best}.
+Использованы узлы, равноотстоящие в логарифмическом масштабе;
+узлы лежащие в местах пересечений границ областей УЭС с концетрическими окружностями и лучами,
+отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка 'pq30' библиотеки triangle.
+
+\begin{figure}[H]
+\includegraphics{exps/last_curves}
+\caption{}
+%\label{fig:plot}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics{exps/last_tg_1}
+\caption{}
+%\label{fig:plot}
+\end{figure}
+
+\begin{figure}[H]
+\centering
+\includegraphics{exps/last_field_1}
+\caption{}
+%\label{fig:plot}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics{exps/last_tg_2}
+\caption{}
+%\label{fig:plot}
+\end{figure}
+
+\begin{figure}[H]
+\includegraphics{exps/last_field_2}
+\caption{}
+%\label{fig:plot}
+\end{figure}
+
+
 \subsection{Результаты}
 
-Оптимальный результат получен в эксперименте X за время в среднем X сек.
-со среднеквадратичным отклонением X сек. при N проходов с N циклами. Использованы:
-функция PointSource библиотеки FEniCS для введения точечного источника потенциала; узлы, равноотстоящие в логарифмическом масштабе;
+Лучший результат получен в эксперименте \ref{exp} за $538 \text{ мc } \pm 37.8 \text{ мс}$, 7 проходов
+($\text{среднее значение} \pm \text{среднеквадратичное отклонение}$ от 7 проходов, в каждом проходе 1 цикл)
+Использованы узлы, равноотстоящие в логарифмическом масштабе;
 узлы лежащие в местах пересечений границ областей УЭС с концетрическими окружностями и лучами,
-отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка библиотеки triangle 'pq30'.
-Использован ПК для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами
-(4 = 1*2*2 --- 1 физический процессор, 2 ядра в физическом процессоре, 2 потока в каждом ядре).
+отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка 'pq30' библиотеки triangle.
+Использован ПК для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами.
 
 В результате проведённых численных экспериментов разработан метод построения оптимальных сеток
 для решения задачи БКЗ на сетке, позволяющий получить приемлимое численное решение с меньшими затратами ресурсов.
