--- a/inc/4-solution.tex
+++ b/inc/4-solution.tex
@@ -3,7 +3,7 @@
 <описание двух моделей>
 \\\\
 Использован ПК для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами
-(4 = 1*2*2 --- 1 физический процессор, 2 ядра в физическом процессоре, 2 потока в каждом ядре).
+($4 = 1 \cdot 2 \cdot 2$ --- 1 физический процессор, 2 ядра в физическом процессоре, 2 потока в каждом ядре).
 
 
 \subsection{Модель 1}
