--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -2,6 +2,6 @@
 
 <В скобках <> указаны комментарии>
 
-<Введение позже будет. Полагаю, необходимо искать материал еще.>
+<Полагаю, для введения необходимо искать материал еще.>
 
 \clearpage
