--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -29,6 +29,25 @@
     — Казань: Казанский государственный универcитет им. В.И. Ульянова–Ленина, 2004.
     — 239 с.
     --- URL: \url{https://kpfu.ru/staff_files/F1229619272/MKEbookDRZ.pdf}
+
+\bibitem{palette}
+    Технология создания многопараметричных
+    палеток для решения прямых и обратных задач
+    скважинной геоэлектрики /
+    К. С. Сердюк [и др.] //
+    Каротажник. Результаты исследований и работ ученых и конструкторов.
+    --- 2014
+    --- Вып. 241.
+    --- С. 32-41.
+
+\bibitem{valiullin}
+    Геофизические исследования и работы в скважинах: в 7 т. Т. 1.
+    Промысловая геофизика /
+    / Р.А. Валиуллин, Л.Е. Кнеллер.
+    --- Уфа: Информреклама.
+    --- 2010.
+    --- 172 с.
+
 \end{thebibliography}
 \endgroup
 
