--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -1,7 +1,37 @@
 \anonsection{Введение}
 
-<В скобках <> указаны комментарии>
+Проблема и ее актуальность. Геофизические исследования скважин
+электрическими методами используются для
+реконструкции пространственного распределения
+УЭС, которое связано с нефтенасыщением.
+Задачи электрокаротажа нелинейны, а обратная
+задача определения параметров по измерениям
+некорректна (неоднозначна). Решение задач в
+полных постановках весьма ресурсоемко и плохо
+подходит для промышленного применения.
 
-<Полагаю, для введения необходимо искать материал еще.>
+Обработка диаграмм БКЗ заключается в выделении пластов
+и отсчете существенных значений $\rho_\text {к}$ против них, построении
+кривых зависимости $\rho_\text {к}$ от размера зонда --- кривых зондирования
+и кривых БКЗ, сравнении полученных кривых с расчетными
+для определения удельного сопротивления пластов и выявлении
+зон проникновения фильтрата ПЖ в пласт \cite{valiullin}.
+
+Основная идея палеточного подхода для решения задач скважинной
+геоэлектрики заключается в задании функции связи входных
+и выходных данных решаемой задачи на основе интерполяции по
+дискретному множеству имеющихся решений.
+Преимущества рассматриваемого
+подхода состоят в отсутствии зависимости скорости
+решения от входных данных и существенном снижении требований к
+качеству начального приближения, как это требуется в итеративных алгоритмах
+минимизации невязки теоретических и экспериментальных данных \cite{palette}.
+Недостатком является больший объем данных, необходимых для хранения палетки.
+
+В настоящее
+время на практике используют палетки, как правило, для
+двух- и трехслойных моделей, покрывающих наиболее
+распространенные ситуации.
+
 
 \clearpage
