--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -33,5 +33,6 @@
 двух- и трехслойных моделей, покрывающих наиболее
 распространенные ситуации.
 
+На практике возникает необходимость в палетках с такими параметрами, которые не опубликованы. Поэтому была поставлена задача решения прямой задачи БКЗ, где была бы возможность задавать необходимые параметры модели для построения палеток.
 
 \clearpage
