--- a/inc/2-pz.tex
+++ b/inc/2-pz.tex
@@ -48,7 +48,7 @@ trial and test functions are used in FEniCS programs too. The trial and
 test functions belong to certain so-called function spaces that specify the
 properties of the functions.
 
-В данном случе, сначала умножим уравнение Пуассона на тестовую функцию $v$ и интегрируем по заданной области $\Omega$: 
+В данном случае, сначала умножим уравнение Пуассона на тестовую функцию $v$ и интегрируем по заданной области $\Omega$: 
 \begin{equation} \label{eq:none1}
   - \int_\Omega \nabla \cdot (\nabla u / \rho)v \dx 
   = \int_\Omega f v \dx.
