--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -1,5 +1,11 @@
 \anonsection{Заключение}
 
-<все итоги, которые заявлены в предыдущих главах>
+Показана применимость метода решения прямой задачи БКЗ с приемлимой точностью.
+
+Текущая реализация метода является прототипом, требуется оптимизация реализации.
+
+Необходимо исследование погрешности метода для курса дальнейшей работы.
+
+
 
 \clearpage
