--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -357,7 +357,7 @@ $\varepsilon$.
 
 \subsection{Результаты}
 
-Лучший результат получен в эксперименте \ref{exp} за $538 \text{ мc } \pm 37.8 \text{ мс}$, 7 проходов
+Лучший результат получен в эксперименте \ref{best} за $538 \text{ мc } \pm 37.8 \text{ мс}$, 7 проходов
 ($\text{среднее значение} \pm \text{среднеквадратичное отклонение}$ от 7 проходов, в каждом проходе 1 цикл)
 Использованы узлы, равноотстоящие в логарифмическом масштабе;
 узлы лежащие в местах пересечений границ областей УЭС с концетрическими окружностями и лучами,
