--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -33,6 +33,6 @@
 двух- и трехслойных моделей, покрывающих наиболее
 распространенные ситуации.
 
-На практике возникает необходимость в палетках с такими параметрами, которые не опубликованы. Поэтому была поставлена задача решения прямой задачи БКЗ, где была бы возможность задавать необходимые параметры модели для построения палеток.
+На практике возникает необходимость в палетках с такими параметрами, которые не опубликованы. Поэтому была поставлена задача разработки метода решения прямой задачи БКЗ, которая позволила бы задавать необходимые параметры модели для построения палеток.
 
 \clearpage
