--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -196,7 +196,7 @@ $\varepsilon$.
 Вызвана триангуляция библиотеки triangle с настройкой 'pq30',
 где 'p' сообщает библиотеке о вводе графа, 'q30' --- ограничение снизу 30 градусов значений углов треугольников двухмерной сетки.
 
-Кол-во узлов: 421
+421 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/fullmesh_1}
@@ -211,7 +211,7 @@ $\varepsilon$.
 и построены сегменты половинов внутреннего и внешнего границ.
 Использованы лагранжевые элементы $\mathcal{P}_1$.
 
-Кол-во узлов: 221
+221 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/1_mesh}
@@ -226,7 +226,7 @@ $\varepsilon$.
 \stepcounter{exp} \theexp.
 Использованы узлы, равноотстоящие в логарифмическом масштабе.
 
-Кол-во узлов: 1510
+1510 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/2_mesh}
@@ -241,7 +241,7 @@ $\varepsilon$.
 \stepcounter{exp} \theexp.
 Добавлены сегменты на местах разрыва коэффициента УЭС.
 
-Кол-во узлов: 7201
+7201 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/3_mesh}
@@ -256,7 +256,7 @@ $\varepsilon$.
 \stepcounter{exp} \theexp.
 Использованы лагранжевые элементы $\mathcal{P}_3$.
 
-Кол-во узлов: 7201
+7201 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/4_mesh}
@@ -271,7 +271,7 @@ $\varepsilon$.
 \refstepcounter{exp} \theexp \label{optimal}.
 Использован точечный источник вместо внутреннего граничного условия.
 
-Кол-во узлов: 6659
+6659 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/5_mesh}
@@ -286,7 +286,7 @@ $\varepsilon$.
 \stepcounter{exp} \theexp.
 Добавлены на границе $r = 0$ узлы одномерной сетки.
 
-Кол-во узлов: 6845
+6845 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/6_mesh}
@@ -301,7 +301,7 @@ $\varepsilon$.
 \refstepcounter{exp} \theexp.
 Добавлены сегменты возле мест разрыва коэффициента УЭС. Использованы лагранжевые элементы $\mathcal{P}_2$.
 
-Кол-во узлов: 156856
+156856 узлов.
 
 \begin{figure}[H]
   \includegraphics{exps/7_mesh}
@@ -313,14 +313,13 @@ $\varepsilon$.
   \includegraphics{exps/7_rhog}
 \end{figure}
 
-<Здесь новые эксперименты, которые еще не оформлены,
-и лучший эксперимент, в котором получилось приемлимое решение кажущегося сопротивления во всей области
-с меньшим числом узлов.>
 
 \refstepcounter{exp} \theexp \label{best}.
 Использованы узлы, равноотстоящие в логарифмическом масштабе;
 узлы лежащие в местах пересечений границ областей УЭС с концетрическими окружностями и лучами,
 отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка 'pq30' библиотеки triangle.
+
+2859 узлов.
 
 \begin{figure}[H]
 \includegraphics{exps/last_curves}
