--- a/inc/0-bibliography.tex
+++ b/inc/0-bibliography.tex
@@ -12,27 +12,32 @@
 \bibitem{FEM_intro}
     Введение в теорию метода конечных элементов. Учебное пособие /
     Р.З. Даутов, М.М. Карчевский.
-    — Казань: Казанский государственный универcитет им. В.И. Ульянова–Ленина, 2004.
-    — 239 с.
+    --- Казань: Казанский государственный универcитет им. В.И. Ульянова–Ленина, 2004.
+    --- 239 с.
     --- URL: \url{https://kpfu.ru/staff_files/F1229619272/MKEbookDRZ.pdf}
 
 \bibitem{palette}
     Технология создания многопараметричных
     палеток для решения прямых и обратных задач
     скважинной геоэлектрики /
-    К. С. Сердюк [и др.] //
-    Каротажник. Результаты исследований и работ ученых и конструкторов.
-    --- 2014
+    К. С. Сердюк [и др.]
+    Каротажник. Результаты исследований и работ ученых и конструкторов, 2014.
     --- Вып. 241.
     --- С. 32-41.
 
 \bibitem{valiullin}
     Геофизические исследования и работы в скважинах: в 7 т. Т. 1.
     Промысловая геофизика /
-    / Р.А. Валиуллин, Л.Е. Кнеллер.
-    --- Уфа: Информреклама.
-    --- 2010.
+    Р.А. Валиуллин, Л.Е. Кнеллер.
+    --- Уфа: Информреклама, 2010.
     --- 172 с.
+
+
+\bibitem{none}
+    Методические указания по комплексной интерпретации данных БКЗ, БК, ИК (с комплектом палеток) /
+    Науч.-произв. об-ние "Союзпромгеофизика", Всесоюз. н.-и. и проект.-конструкт. ин-т геофиз. методов исслед., испытания и контроля нефтегазоразведоч. скважин. Е. В. Чаадаев, И. П. Бриченко, А. А. Левченко [и др.]
+    --- Калинин: НПО "Союзпромгеофизика", 1990.
+    --- 85 с.
    
 \bibitem{FEFIS}
     Finite Elements and Fast Iterative Solvers: with Applications in Incompressible Fluid Dynamics (2nd edition) /
