--- a/inc/0-title.tex
+++ b/inc/0-title.tex
@@ -1,44 +1,54 @@
 \thispagestyle{empty}
 
-{\small
+{\fontsize{12pt}{17.1pt}\selectfont
 
-\begin{center}
-    \uppercase{
-    Федеральное государственное бюджетное \\
-    образовательное учреждение высшего образования \\
-    «Башкирский государственный университет»
+\begin{center}\uppercase{
+    Министерство науки и высшего образования Российской Федерации \\
+    федеральное государственное бюджетное \\
+    образовательное учреждение вывсшего образования \\
+    \guillemotleft Башкирский государственный унивеситет\guillemotright
 
     \hfill
 
     Физико-технический институт
 
+    Кафедра геофизики
+
     \hfill
 
-    Кафедра геофизики
-    }
+    Выпускная квалификационная работа \\
+    по программе бакалавриата
 
-    \vfill\vfill
+    \hfill
 
-    Реферат по дисциплине «Термогидродинамические методы исследования пласта» на тему: \\
-    «Метод МДХ для обработки КВД после кратковременной работы скважины»
-\end{center}
+    Кадыров Алмаз Венерович
 
-\vfill\vfill
+    \guillemotleft Решение прямой задачи бокового каротажного зондирования методами численного моделирования\guillemotright
+}\end{center}
 
-\hfill\begin{minipage}{4.4cm}
+\vfill
+
+\hfill\begin{minipage}{0.5\linewidth}
     \flushleft
     Выполнил: \\
-    студент 4 курса гр. 4Ф-3 \\
-    Кадыров А.В. \\
-    Проверил: \\
-    профессор кафедры геофизики, д.т.н. \\
-    Рамазанов А.Ш.
+    Студент 4 курса очной формы обучения \\
+    Направление подготовки -- \guillemotleft Физика\guillemotright \\
+    Профиль -- \guillemotleft Физика Земли и планет\guillemotright
+\end{minipage}
+
+\vfill
+
+\hfill\begin{minipage}{0.5\linewidth}
+    \flushleft
+    Руководитель: \\
+    Доцент, к.ф.-м.н. \\
+    \underline{\hspace{3cm}}/ И.С. Ремеев
 \end{minipage}
 
 \vfill
 
 \begin{center}
-    Уфа 2020
+    Уфа -- 2020
 \end{center}
 
 }
