--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -17,19 +17,6 @@ $z$ --- осевая координата, по которой область о
 с УЭС $\rho_\text{зп}=15$, третий слой --- пласт ($r>r_\text{п}$) с УЭС $\rho_\text{п}=10$. В начале координат размещается
 источник тока силой 1.
 
-В этих условиях случае потенциал электростатического поля $\varphi$ определяется следующей краевой задачей:
-\begin{equation}
-\Delta\varphi=\frac{1}{r}\frac{\partial}{\partial r}\left(r\frac{\partial\varphi}{\partial r}\right)
-+ \frac{\partial^2\varphi}{\partial z^2}=0,
-\end{equation}
-с граничными условиями Дирихле
-\begin{eqnarray}
-\varphi(r\to+\infty)   &\to& 0\\
-\varphi(z\to\pm\infty) &\to& 0\\
-\varphi(r^2+z^2\to 0)  &\to& \frac{1}{4\pi\sqrt{r^2+z^2}}\\
-\left.\frac{\partial \varphi}{\partial r}\right|_{r=0, z\ne 0} &=& 0
-\end{eqnarray}
-
 В качестве основы для расчётной сетки использовалась одномерная сетка, узлы которой рассчитаны в параграфе
 \ref{OneDim}, отложенная на лучах, исходящих из начала координат под различными углами.
 Затем эта основа дополнялась узлами, лежащими на границах разрыва УЭС $r=1$ и $r=r_\text{п}$.
@@ -191,10 +178,10 @@ $\varepsilon$.
 
 \refstepcounter{exp} \theexp \label{text_fullmesh}.
 Построены вершины шестиугольников из узлов решения для гиперболы.
-Построены сегменты (отрезки) внутреннего и внешнего границ (сегменты изображены красными линиями)
-и обозначена метка дыры (изображена красным крестиком) внутри внутренней границы для триангуляции (рис. \ref{fullmesh}).
+На рис. \ref{fig:fullmesh} Построены отрезки графа внутреннего и внешнего границ (граф изображен с красным цветом)
+и обозначена метка дыры (изображена красным крестиком), в которой исключена триангуляция.
 Вызвана триангуляция библиотеки triangle с настройкой 'pq30',
-где 'p' сообщает библиотеке о вводе графа, 'q30' --- ограничение снизу 30 градусов значений углов треугольников двухмерной сетки.
+где 'p' сообщает библиотеке о вводе графа, 'q30' --- ограничение снизу 30 градусов значений углов треугольников триангуляции.
 
 421 узлов.
 
@@ -203,7 +190,7 @@ $\varepsilon$.
 \end{figure}
 \begin{figure}[H]
   \includegraphics{exps/fullmesh_2}
-  \caption{} \label{fig_fullmesh}
+  \caption{} \label{fig:fullmesh}
 \end{figure}
 
 \stepcounter{exp} \theexp.
@@ -317,7 +304,7 @@ $\varepsilon$.
 \refstepcounter{exp} \theexp \label{best}.
 Использованы узлы, равноотстоящие в логарифмическом масштабе;
 узлы лежащие в местах пересечений границ областей УЭС с концетрическими окружностями и лучами,
-отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка 'pq30' библиотеки triangle.
+отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка 'p' библиотеки triangle.
 
 2859 узлов.
 
@@ -328,14 +315,12 @@ $\varepsilon$.
 \end{figure}
 
 \begin{figure}[H]
-\centering
 \includegraphics{exps/last_tg_1}
 \caption{}
 %\label{fig:plot}
 \end{figure}
 
 \begin{figure}[H]
-\centering
 \includegraphics{exps/last_field_1}
 \caption{}
 %\label{fig:plot}
