--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 %%% Начало документа
 \begin{document}
 
-% \input{inc/0-title} % Титульный лист
+\input{inc/0-title} % Титульный лист
 
 \tableofcontents % Содержание 
 \clearpage
@@ -25,6 +25,7 @@
 \input{inc/4-solution} %
 \input{inc/0-conclusion} % Заключение
 \input{inc/0-bibliography} % Библиографический список
+\input{inc/a-app} % Вариант программы на Python для расчета сеток
 
 \end{document}
 %%% Конец документа
