--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -1,11 +1,13 @@
 \anonsection{Заключение}
 
-Показана применимость метода решения прямой задачи БКЗ с приемлимой точностью.
+Освоены пакеты программ для паралелльных вычислений: вычислителная платформа для автоматического решения ДУЧП FEniCS, библиотека для векторных вычислений Numpy.
 
-Текущая реализация метода является прототипом, требуется оптимизация реализации.
+Проведено сопоставление полученных результатов с известными результатами в литературе.
 
-Необходимо исследование погрешности метода для курса дальнейшей работы.
+% Показана применимость метода решения прямой задачи БКЗ с приемлимой точностью.
 
+% Текущая реализация метода является прототипом, требуется оптимизация реализации.
 
+% Необходим анализ погрешности метода для курса дальнейшей работы.
 
 \clearpage
