--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -1,13 +1,14 @@
 \anonsection{Заключение}
 
-Освоены пакеты программ для паралелльных вычислений: вычислителная платформа для автоматического решения ДУЧП FEniCS, библиотека для векторных вычислений Numpy.
+Освоены пакеты программ для параллельных вычислений: вычислительная платформа для автоматического решения ДУЧП FEniCS, библиотека для векторных вычислений Numpy.
 
-Проведено сопоставление полученных результатов с известными результатами в литературе.
+Разработаны прототипы программ для численного решения прямой задачи БКЗ для двух известных моделей прискважинной зоны.
 
-% Показана применимость метода решения прямой задачи БКЗ с приемлимой точностью.
+Проведены расчеты и сопоставление с известными результатами в литературе. Показана применимость метода решения прямой задачи БКЗ с приемлимой точностью. В данном случае мы следили за двумя параметрами: гладкостью решения и сравнением "на глаз" с известной палеткой. Поскольку принятая методика решения обратной задачи БКЗ основано на использованием палеток на "сравнении на глаз", то такой критерий годится. Относительная ошибка примерно ${<10}$ \%.
 
-% Текущая реализация метода является прототипом, требуется оптимизация реализации.
+Все вычисления произведены на ПК: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами
+($1 \text{ физический процессор} \times 2 \text{ ядер в физическом процессоре} \times 2 \text{ потока в каждом ядре}$).
 
-% Необходим анализ погрешности метода для курса дальнейшей работы.
+Необходим анализ погрешности метода для курса дальнейшей работы.
 
 \clearpage
