--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -1,6 +1,6 @@
 \section{Расчетная сетка}
 
-При применении метода конечных элементов к данной задаче возникают затруднения, связанные с тем,
+Сложность численного расчета данной задачи следующая. При применении метода конечных элементов к данной задаче возникают затруднения, связанные с тем,
 что искомый потенциал поля имеет особенность (уходит на бесконечность) в окрестности источника тока.
 Это приводит к необходимости сгущения расчётной сетки в этой окрестности, но сильное сгущение
 приводит к чрезмерному росту числа узлов сетки и, как следствие, сильному росту времени, требуемому на решение.
@@ -11,15 +11,15 @@
 \subsection{Постановка задачи}
 
 В качестве модельной рассматривалась задача для трёхслойной осесимметричной модели системы скважина--пласт:
-задача рассматривается в цилиндрической системе координат $(r, z)$, где $r > 0$ --- радиальная координата,
-$z$ --- осевая координата, по которой область однородна (единственный однородный пласт бесконечной мощности),
-первый слой --- сама скважина ($0 < r < 1$) с УЭС $\rho_\text с = 1$, второй слой --- зона проникновения ($1<r<r_\text{зп} = 9$)
-с УЭС $\rho_\text{зп}=15$, третий слой --- пласт ($r>r_\text{п}$) с УЭС $\rho_\text{п}=10$. В начале координат размещается
+задача рассматривается в цилиндрической системе координат ${(r, z)}$, где ${r > 0}$ --- радиальная координата,
+${z}$ --- осевая координата, по которой область однородна (единственный однородный пласт бесконечной мощности),
+первый слой --- сама скважина (${0 < r < 1}$) с УЭС ${\rho_\text с = 1}$, второй слой --- зона проникновения (${1<r<r_\text{зп} = 9}$)
+с УЭС ${\rho_\text{зп}=15}$, третий слой --- пласт (${r>r_\text{п}}$) с УЭС ${\rho_\text{п}=10}$. В начале координат размещается
 источник тока силой 1.
 
 В качестве основы для расчётной сетки использовалась одномерная сетка, узлы которой рассчитаны в параграфе
 \ref{OneDim}, отложенная на лучах, исходящих из начала координат под различными углами.
-Затем эта основа дополнялась узлами, лежащими на границах разрыва УЭС $r=1$ и $r=r_\text{п}$.
+Затем эта основа дополнялась узлами, лежащими на границах разрыва УЭС ${r=1}$ и ${r=r_\text{п}}$.
 Также производилось дополнительное адаптивное сгущение сетки в областях, в которых наблюдалось сильное искажение
 решения по сравнению с эталонным (полученным на сетке с большим числом узлов во всей области).
 
@@ -36,16 +36,16 @@ $$\varphi(r, z)=\frac{C}{\sqrt{r^2+z^2}}$$ (здесь начало коорди
 УЭС в этой же окрестности (а она считается постоянной, равной УЭС жидкости в скважине), решение будет всегда
 иметь одну и ту же особенность в начале координат и изменяться плавно вдали от источника тока.
 В качестве первого приближения к оптимальной сетке можно использовать оптимальную одномерную сетку
-для известного распределения $y=1/x$, и затем эту одномерную сетку распространять на несколько лучей,
+для известного распределения ${y=1/x}$, и затем эту одномерную сетку распространять на несколько лучей,
 исходящих из начала координат.
 
 Поэтому первой поставленной задачей было построение оптимальной одномерной сетки для интерполяции
-известной функции $y=1/x$:
+известной функции ${y=1/x}$:
 
-{\bf Задача}. Дана функция $y=1/x$ на интервале $[\delta, +\infty)$ ($\delta > 0$). Построить на ней сетку
-$\{x_i,\,i=0,1,\dots\}$ из наименьшего числа узлов (начиная с $x_0=\delta$) так, чтобы разность между
-функцией $y$ и приближающим её сплайном первого порядка на этой сетке не превышала заданного значения
-$\varepsilon$.
+{\bf Задача}. Дана функция ${y=1/x}$ на интервале ${[\delta, +\infty)}$ (${\delta > 0}$). Построить на ней сетку
+${\{x_i,\,i=0,1,\dots\}}$ из наименьшего числа узлов (начиная с ${x_0=\delta}$) так, чтобы разность между
+функцией ${y}$ и приближающим её сплайном первого порядка на этой сетке не превышала заданного значения
+${\varepsilon}$.
 
 %Тут краткий обзор, что использовалось для решения, формулы, программы.
 %URL-ссылка офомляется так: \cite{Python}
@@ -194,9 +194,9 @@ $\varepsilon$.
 \end{figure}
 
 \stepcounter{exp} \theexp.
-Для расчетной сетки выбраны узлы, расположенные справа от оси $r = 0$,
+Для расчетной сетки выбраны узлы, расположенные справа от оси ${r = 0}$,
 и построены сегменты половинов внутреннего и внешнего границ.
-Использованы лагранжевые элементы $\mathcal{P}_1$.
+Использованы лагранжевые элементы ${\mathcal{P}_1}$.
 
 221 узлов.
 
@@ -241,7 +241,7 @@ $\varepsilon$.
 \end{figure}
 
 \stepcounter{exp} \theexp.
-Использованы лагранжевые элементы $\mathcal{P}_3$.
+Использованы лагранжевые элементы ${\mathcal{P}_3}$.
 
 7201 узлов.
 
@@ -271,7 +271,7 @@ $\varepsilon$.
 \end{figure}
 
 \stepcounter{exp} \theexp.
-Добавлены на границе $r = 0$ узлы одномерной сетки.
+Добавлены на границе ${r = 0}$ узлы одномерной сетки.
 
 6845 узлов.
 
@@ -286,7 +286,7 @@ $\varepsilon$.
 \end{figure}
 
 \refstepcounter{exp} \theexp.
-Добавлены сегменты возле мест разрыва коэффициента УЭС. Использованы лагранжевые элементы $\mathcal{P}_2$.
+Добавлены сегменты возле мест разрыва коэффициента УЭС. Использованы лагранжевые элементы ${\mathcal{P}_2}$.
 
 156856 узлов.
 
@@ -303,8 +303,8 @@ $\varepsilon$.
 
 \refstepcounter{exp} \theexp \label{best}.
 Использованы узлы, равноотстоящие в логарифмическом масштабе;
-узлы лежащие в местах пересечений границ областей УЭС с концетрическими окружностями и лучами,
-отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка 'p' библиотеки triangle.
+узлы лежащие в местах пересечений границ областей УЭС с концентрическими окружностями и лучами,
+отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы ${\mathcal{P}_2}$; настройка 'p' библиотеки triangle.
 
 2859 узлов.
 
@@ -341,14 +341,9 @@ $\varepsilon$.
 
 \subsection{Результаты}
 
-Лучший результат получен в эксперименте \ref{best} за $538 \text{ мc } \pm 37.8 \text{ мс}$, 7 проходов
-($\text{среднее значение} \pm \text{среднеквадратичное отклонение}$ от 7 проходов, в каждом проходе 1 цикл)
-Использованы узлы, равноотстоящие в логарифмическом масштабе;
-узлы лежащие в местах пересечений границ областей УЭС с концетрическими окружностями и лучами,
-отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы $\mathcal{P}_2$; настройка 'pq30' библиотеки triangle.
-Использован ПК для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами.
+Лучший результат получен в эксперименте \ref{best} за ${538 \text{ мc } \pm 37.8 \text{ мс }}$, 7 проходов
+(${\text{среднее значение} \pm \text{среднеквадратичное отклонение}}$ от 7 проходов, в каждом проходе 1 цикл). Использованы узлы, равноотстоящие в логарифмическом масштабе; узлы лежащие в местах пересечений границ областей УЭС с концентрическими окружностями и лучами, отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы ${\mathcal{P}_2}$; настройка 'p' библиотеки triangle. Использован ПК для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами ($1 \text{ физический процессор} \times 2 \text{ ядер в физическом процессоре} \times 2 \text{ потока в каждом ядре}$)..
 
-В результате проведённых численных экспериментов разработан метод построения оптимальных сеток
-для решения задачи БКЗ на сетке, позволяющий получить приемлимое численное решение с меньшими затратами ресурсов.
+В результате проведённых численных экспериментов разработан метод построения оптимальных сеток для решения задачи БКЗ на сетке, позволяющий получить приемлимое численное решение с меньшими затратами ресурсов. В данном случае мы следили за двумя параметрами: гладкостью решения и сравнением "на глаз" с известной палеткой. Поскольку принятая методика решения обратной задачи БКЗ основано на использованием палеток на "сравнении на глаз", то такой критерий годится. Относительная ошибка примерно ${<10}$ \%.
 
 \clearpage
