--- a/inc/0-intro.tex
+++ b/inc/0-intro.tex
@@ -2,20 +2,20 @@
 
 Проблема и ее актуальность. Геофизические исследования скважин
 электрическими методами используются для
-реконструкции пространственного распределения
-УЭС, которое связано с нефтенасыщением.
+реконструкции пространственного распределения удельного электрического
+сопротивления (УЭС), которое связано с нефтенасыщением.
 Задачи электрокаротажа нелинейны, а обратная
 задача определения параметров по измерениям
 некорректна (неоднозначна). Решение задач в
 полных постановках весьма ресурсоемко и плохо
 подходит для промышленного применения.
 
-Обработка диаграмм БКЗ заключается в выделении пластов
+Обработка диаграмм бокового каротажного зондирования (БКЗ) заключается в выделении пластов
 и отсчете существенных значений $\rho_\text {к}$ против них, построении
 кривых зависимости $\rho_\text {к}$ от размера зонда --- кривых зондирования
 и кривых БКЗ, сравнении полученных кривых с расчетными
 для определения удельного сопротивления пластов и выявлении
-зон проникновения фильтрата ПЖ в пласт \cite{valiullin}.
+зон проникновения фильтрата промывочной жидкости (ПЖ) в пласт \cite{valiullin}.
 
 Основная идея палеточного подхода для решения задач скважинной
 геоэлектрики заключается в задании функции связи входных
