--- a/inc/1-bkz_problem.tex
+++ b/inc/1-bkz_problem.tex
@@ -1,6 +1,6 @@
 \section{Прямая задача БКЗ}
 
-Боковое каротажное зондирование (БКЗ) состоит в измерении
+БКЗ состоит в измерении
 потенциала электрического поля, создаваемого в среде точечным электрическим зарядом.
 Далее по измеренному распределению потенциала предпринимается попытка воссоздать
 геометрию среды, а также ее удельное сопротивление в разных точках пространства.
