--- a/inc/3-mesh.tex
+++ b/inc/3-mesh.tex
@@ -28,7 +28,7 @@ ${z}$ --- осевая координата, по которой область 
 
 Задача БКЗ моделируется, как правило, для осесимметричного случая, что приводит к двумерным задачам.
 Известно, что точное решение (потенциал электрического поля) для случая одинакового во всём пространстве
-удельного электрического сопротивления (УЭС) есть константа, делённая на расстояние до источника:
+УЭС есть константа, делённая на расстояние до источника:
 
 $$\varphi(r, z)=\frac{C}{\sqrt{r^2+z^2}}$$ (здесь начало координат совпадает с источником тока)
 
@@ -342,7 +342,7 @@ ${\varepsilon}$.
 \subsection{Результаты}
 
 Лучший результат получен в эксперименте \ref{best} за ${538 \text{ мc } \pm 37.8 \text{ мс }}$, 7 проходов
-(${\text{среднее значение} \pm \text{среднеквадратичное отклонение}}$ от 7 проходов, в каждом проходе 1 цикл). Использованы узлы, равноотстоящие в логарифмическом масштабе; узлы лежащие в местах пересечений границ областей УЭС с концентрическими окружностями и лучами, отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы ${\mathcal{P}_2}$; настройка 'p' библиотеки triangle. Использован ПК для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами ($1 \text{ физический процессор} \times 2 \text{ ядер в физическом процессоре} \times 2 \text{ потока в каждом ядре}$)..
+(${\text{среднее значение} \pm \text{среднеквадратичное отклонение}}$ от 7 проходов, в каждом проходе 1 цикл). Использованы узлы, равноотстоящие в логарифмическом масштабе; узлы лежащие в местах пересечений границ областей УЭС с концентрическими окружностями и лучами, отрезки графа на местах разрыва коэффициента УЭС; лагранжевые элементы ${\mathcal{P}_2}$; настройка 'p' библиотеки triangle. Использован компьютер для вычисления: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами ($1 \text{ физический процессор} \times 2 \text{ ядра в физическом процессоре} \times 2 \text{ потока в каждом ядре}$)..
 
 В результате проведённых численных экспериментов разработан метод построения оптимальных сеток для решения задачи БКЗ на сетке, позволяющий получить приемлимое численное решение с меньшими затратами ресурсов. В данном случае мы следили за двумя параметрами: гладкостью решения и сравнением "на глаз" с известной палеткой. Поскольку принятая методика решения обратной задачи БКЗ основано на использованием палеток на "сравнении на глаз", то такой критерий годится. Относительная ошибка примерно ${<10}$ \%.
 
