--- a/inc/0-conclusion.tex
+++ b/inc/0-conclusion.tex
@@ -6,8 +6,8 @@
 
 Проведены расчеты и сопоставление с известными результатами в литературе. Показана применимость метода решения прямой задачи БКЗ с приемлимой точностью. В данном случае мы следили за двумя параметрами: гладкостью решения и сравнением "на глаз" с известной палеткой. Поскольку принятая методика решения обратной задачи БКЗ основано на использованием палеток на "сравнении на глаз", то такой критерий годится. Относительная ошибка примерно ${<10}$ \%.
 
-Все вычисления произведены на ПК: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами
-($1 \text{ физический процессор} \times 2 \text{ ядер в физическом процессоре} \times 2 \text{ потока в каждом ядре}$).
+Все вычисления произведены на компьютере: операционная система Ubuntu 18.04 LTS, процессор Intel Pentium 4415U 2.30 ГГц с 4 логическими процессорами
+($1 \text{ физический процессор} \times 2 \text{ ядра в физическом процессоре} \times 2 \text{ потока в каждом ядре}$).
 
 Необходим анализ погрешности метода для курса дальнейшей работы.
 
