--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,8 @@
 %%% Начало документа
 \begin{document}
 
-\input{inc/0-title} % Титульный лист
+%\input{inc/0-title} % Титульный лист
+\includepdf{extra/title_signed}
 
 \tableofcontents % Содержание 
 \clearpage
